[package]
name = "wmaps-algorithms"
version = "0.1.0"
edition = "2021"
default-run = "wmaps-algorithms"

# Binary for the routing algorithms
[[bin]]
name = "wmaps-algorithms"
path = "src/main.rs"

[lib]
name = "wmaps_algorithms"
path = "src/lib/lib.rs"

[dependencies]
clippy = "0.0.302"
roxmltree = "0.20.0"
rustfmt = "0.10.0"
